Fixed issue where jewelry box stats can overflow to new line

--- a/osj-project/pages/static/pages/style.css
+++ b/osj-project/pages/static/pages/style.css
@@ -34,8 +34,8 @@
 }
 
 .jewelry-box-stats {
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 12px;
+    padding-right: 12px;
     color: #808080;
     font-size: 12px;
 }
@@ -257,4 +257,6 @@ body {
 .col-sm-auto {
     margin-left: auto;
     margin-right: auto;
+    padding: 0px;
 }
+
